--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "__MSG_appName__",
+  "name": "chrome-controller",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "__MSG_appDescription__",
+  "description": "Control chrome from any game pad",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
