--- a/app/manifest.json
+++ b/app/manifest.json
@@ -11,7 +11,8 @@
   "background": {
     "scripts": [
       "scripts/chromereload.js",
-      "scripts/background.js"
+      "scripts/background.js",
+      "scripts/controller.js"
     ]
   },
   "browser_action": {
