--- a/app/manifest.json
+++ b/app/manifest.json
@@ -10,9 +10,24 @@
   "default_locale": "en",
   "background": {
     "scripts": [
+      "scripts/browserCommands.js",
       "scripts/chromereload.js",
       "scripts/background.js"
     ]
+  },
+  "commands": {
+    "nextTab": {
+      "suggested_key": {
+        "default": "Ctrl+Right"
+      },
+      "description": "Go to next tab"
+    },
+    "previousTab": {
+      "suggested_key": {
+        "default": "Ctrl+Left"
+      },
+      "description": "Go to previous tab"
+    }
   },
   "browser_action": {
     "default_icon": {
@@ -42,6 +57,7 @@
   "permissions": [
     "tabs",
     "history",
+    "commands",
     "management",
     "http://*/*",
     "https://*/*"
