buttons are configurable and turn into actions
when buttons are bound using the popup, pressing those buttons fires the bound extension event.  every action can only have one button, every button can only have one action.  Edge cases are not handled by the binding screen at the moment.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -12,7 +12,8 @@
     "scripts": [
       "scripts/chromereload.js",
       "scripts/background.js",
-      "scripts/controller.js"
+      "scripts/controller.js",
+      "scripts/keyBindings.js"
     ]
   },
   "browser_action": {
