Add content css

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -65,6 +65,7 @@
       "js": [
         "scripts/contentscript.js"
       ],
+      "css" : ["styles/content.css"],
       "run_at": "document_end",
       "all_frames": false
     }
