--- a/app/manifest.json
+++ b/app/manifest.json
@@ -72,6 +72,7 @@
         "scripts/clientScripts/browserNavigationClientCommand.js",
         "scripts/clientScripts/selectClientCommand.js",
         "scripts/clientScripts/commandFactory.js",
+        "scripts/clientScripts/browserFullScreenClientCommand.js",
         "scripts/emitterCommand.js"
       ],
       "css" : ["styles/content.css"],
