added open new tab button binding and control. We now open a new tab to our popup/binding page. Also updated manifest to support new command changes and options page link to popup.html.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -54,7 +54,7 @@
     "default_title": "chrome controller",
     "default_popup": "popup.html"
   },
-  "options_page": "options.html",
+  "options_page": "popup.html",
   "omnibox": {
     "keyword": "chrome controller"
   },
